--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,24 @@
-<h1>HOME PAGE test</h1>
+
+<div class="mt-4">
+    <div class="row">
+        
+        {{#each courses}}
+        <div class="col-sm-6 col-lg-4">
+            <div class="card card-course-item">
+                <a href="/courses/{{this.slug}}">
+                <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+                </a>
+                
+                <div class="card-body">
+                <a href="/courses/{{this.slug}}">
+                    <h5 class="Card title">{{this.name}}</h5>
+                </a>
+                    <p class="card-text">{{this.description}}</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div> 
+        {{/each}}
+
+    </div>
+</div>
